--- a/Bericht/bericht.tex
+++ b/Bericht/bericht.tex
@@ -365,8 +365,8 @@ In diesem Kapitel werden die Simulationsergebnisse gezeigt und damit die zwei ve
   \newcommand\grayton{50}
   \draw[thick](\x,\x,0)--(0,\x,0);
   \draw[thick](0,\x,\x)--(\x,\x,\x);
-  \draw[thick](\x,\x,0)--(\x,0,0) node[midway, xshift=3ex]{$1cm$};
-  \draw[thick](\x,0,\x)--(0,0,\x) node[midway, yshift=-2ex]{$1cm$};
+  \draw[thick](\x,\x,0)--(\x,0,0) node[midway, xshift=3ex]{1cm};
+  \draw[thick](\x,0,\x)--(0,0,\x) node[midway, yshift=-2ex]{1cm};
   \draw[thick](\x,\x,\x)--(\x,0,\x);
   \draw[thick](\x,\x,\x)--(\x,0,\x);
   \draw[thick](\x,\x,\x)--(\x,0,\x);
@@ -374,7 +374,7 @@ In diesem Kapitel werden die Simulationsergebnisse gezeigt und damit die zwei ve
   \draw[thick](0,\x,\x)--(0,\x,0);  
   \draw[thick](0,\x,\x)--(0,0,\x);
   \draw[thick](\x,\x,0)--(\x,\x,\x);
-   \draw[thick](\x,0,0)--(\x,0,\x) node[midway, xshift=3ex, yshift=-1ex]{$1cm$};
+   \draw[thick](\x,0,0)--(\x,0,\x) node[midway, xshift=3ex, yshift=-1ex]{1cm};
   
   \draw[gray](\x,0,0)--(0,0,0);
   \draw[gray](0,\x,0) -- (0,0,0);
@@ -386,7 +386,7 @@ In diesem Kapitel werden die Simulationsergebnisse gezeigt und damit die zwei ve
   \draw[gray!\grayton](\h,0,\h) node[scale=\scale]{$\Sigma_3$};
   \draw[gray!\grayton](0,\h,\h) node[scale=\scale]{$\Sigma_4$};
   \draw[gray!\grayton](\h,\h,0) node[scale=\scale]{$\Sigma_5$};
-  \node[text width=4cm, align=center] at (-3,0.3) {$\theta(\Sigma_0) = \theta_0 > 0$ \\ $\theta(\Sigma_1$ bis $\Sigma_5) = 0$};
+  \node[text width=4cm, align=left] at (-3,0.3) {$\theta(\Sigma_0) = \theta_0 > 0$ \\ $\theta(\Sigma_1$ bis $\Sigma_5) = 0$ \\ für \, $t = t_0$};
 \end{tikzpicture}
 \caption{Die simulierte Geometrie und ihre Anfangsbedeckungsgrade}
 \label{fig:cube}
